V0.26.0/README.md
# СтройПроект (ранее ПМООС-RAG)

Локальная модульная система с ИИ для эколога-проектировщика: систематизация
проектной документации (ПД) по **Постановлению Правительства РФ №87**, поиск
ответов на замечания государственной экспертизы по разделу **ПМООС/ООС**,
корректировка раздела и выгрузка данных в **УПРЗА «Эколог» / ИНТЕГРАЛ**.

> **Версия: 0.11.1 «Modular».** Полностью переписана после нерабочей сборки
> pmoos-rag10. Каждый из 6 модулей запускается отдельно (CLI) и из общего
> интерфейса (Streamlit). Поддержка нескольких ИИ-провайдеров на выбор
> (DeepSeek / OpenAI GPT / Google Gemini / Anthropic Claude / Kimi (Moonshot) / Mistral / локальная Ollama)
> с автоматической сменой модели. Оптимизировано под ноутбук с RTX 3070 Ti (8 ГБ).
>
> **Изменения 0.11.1:** исправлены `.bat`-файлы — раньше окно установки сразу
> закрывалось с ошибками вида `'PATH".' is not recognized`. Причина: кириллица в
> кодировке UTF-8 и скобки `()` внутри `echo` ломали разбор cmd.exe. Теперь
> `install.bat` / `run.bat` / `run_module.bat` — на чистом ASCII (английский) с
> правильными концами строк CRLF; все русские пояснения — в этом README.
>
> **Изменения 0.12.0 «Entities & Metadata»** (по результатам ревью rag11):
> 1. **Реестр сущностей** `data/entities/*.yaml` (техника, ЗВ, отходы) —
>    эксперт пополняет без правки кода. Нормализация: «КАМАЗ-65115» /
>    «самосвал КАМАЗ» → один объект «Автосамосвал»; имена ЗВ → код + канон.
>    Регулярки вынесены из кода (отвечает на «regex не масштабируется»).
> 2. **Метаданные чанков** (по запросу): `doc_type`, `section_num` (№ ПП-87),
>    `normative_ref` (СП/ГОСТ/СанПиН из текста), `page_number`, `file_name` —
>    для фильтрации поиска по разделу и нормативам.
> 3. **М1**: для каждого файла показываются тип объекта и версия; **версию можно
>    изменить вручную** (требование пользователя).
> 4. **Экспорт обучающих троек** (anchor/positive/negative) — М5, кнопка/флаг
>    `--triples`; копится общий датасет для будущего дообучения эмбеддера.
> 5. **SQLite-кэши** (эмбеддинги, LLM) переведены в **WAL** + `last_used` и
>    авто-очистку — устойчивее к параллельным воркерам, не растут бесконечно.
> 6. **Qdrant server** через `docker-compose.yml` — для больших баз (200 проектов).
>
> **Изменения 0.13.0 «Memory & Learning»** (обучение на проектах — ключевая цель):
> 1. **Память экспертизы** (`pmoos/memory`): когда инженер принимает/правит ответ
>    в Модуле 4, пара «замечание → принятый ответ» попадает в общую базу по ВСЕМ
>    проектам (`~/.pmoos-rag/memory/expertise.jsonl`).
> 2. **Few-shot из прошлых проектов**: при поиске ответов (Блок 1) система находит
>    похожие принятые замечания и подмешивает их в запрос к ИИ как образцы —
>    переиспользует удачные формулировки эксперта (in-context learning).
> 3. Поиск похожести лексический (без GPU), база растёт сама; в Модуле 4 видно,
>    сколько накоплено. CLI: `--kb` (размер), `--learn` (занести ответы проекта).
> 4. Отключается в `config.yaml`: `memory: { enabled: false }`.
>
> **Изменения 0.14.0 «Context & Knowledge»** (по вашему выбору пунктов 4, 3B, 1B):
> 1. **Контентное сравнение версий** (п.4): при индексации считается подпись
>    содержимого (SHA-256 + MinHash). Версии сверяются по СОДЕРЖИМОМУ — система
>    предупреждает «похожее имя, но разный документ» и «дубликат под другим именем».
>    Файлы по-прежнему не хранятся, только подписи.
> 2. **Расширение контекста при поиске** (п.3B): к найденному фрагменту
>    добавляются соседние чанки, а табличные куски склеиваются в таблицу целиком
>    (важно для таблиц выбросов/отходов). Настройки `retrieval.expand_context`,
>    `context_neighbors`, `merge_tables`.
> 3. **Накопительный граф знаний по проектам** (п.1B): какая техника/ЗВ
>    встречалась в каких разделах и проектах — копится на диске (NetworkX, без
>    сервера), растёт при приёме ответов. Запрос «в каких проектах была техника X»
>    в Модуле 3 (`--who-uses`, `--knowledge`) и в интерфейсе.
>
> Отложено по вашему решению: декомпозиция по аспектам (MRAG, п.2) и описание
> чертежей мультимодальной моделью (п.5) — «потом».
>
> **Изменения 0.14.3:**
> 1. Исправлена **«зависшая индексация»**: модель эмбеддингов грузится после
>    подсчёта файлов и в защите от ошибок; при 0 файлах — сразу понятное
>    сообщение (модель не качается зря), при сбое — статус 🔴 с подсказкой
>    (часто это недоустановленные зависимости — повторите install.bat — или
>    долгая первая загрузка bge-m3 ~2 ГБ). Число файлов видно сразу.
> 2. Добавлены ИИ-провайдеры **Kimi (Moonshot)** и **Mistral** (плюс уже были
>    DeepSeek, GPT, Gemini, Claude, Ollama).
> 3. Убран поток предупреждений Streamlit (`use_container_width` → `width`;
>    интерактивный граф в М3 рисуется по кнопке, а не на каждый рендер).
> 4. `run_module.bat` без аргументов теперь показывает меню, а не открывает Python.
>
> **Версия 0.14.4** — без функциональных изменений относительно 0.14.3 (обновление номера версии и имени файла поставки).
>
> **Версия 0.14.5** — исправлена ошибка установки: `requirements.txt` переведён в чистый ASCII (на русской Windows pip читал файл в cp1251 и падал с UnicodeDecodeError ещё до скачивания пакетов). Шаг обновления pip сделан «fail-fast».
>
> **Версия 0.14.6** — лечение «вечного 🟢 выполняется» в Модуле 2:
> 1. Исправлена проверка процесса на Windows: раньше PID искался ПОДСТРОКОЙ в выводе
>    tasklist, и мёртвый процесс мог вечно числиться живым (цифры PID совпадали с
>    числами в других колонках). Теперь — точная проверка через WinAPI.
> 2. У фоновой индексации появился «пульс» (обновляется каждые 5 с): если процесс
>    умер или завис более 2 минут — интерфейс честно показывает 🔴 с причиной.
> 3. Вывод фонового процесса пишется в журнал `index_log.txt` — в интерфейсе кнопка
>    «📜 Журнал индексации»: виден ход скачивания модели bge-m3 и точный traceback при сбое.
> 4. Кнопка «🛑 Сбросить статус» для зависших состояний (прогресс по файлам сохраняется).
> 5. Сообщение различает «модель скачивается (~2.3 ГБ, первый запуск)» и «модель из кэша»;
>    родительский процесс больше не затирает сообщения дочернего.
>
> **Версия 0.14.7** (раунд замечаний №7):
> 1. **КРИТИЧНО — лечение краша загрузки модели** «Could not import 'PreTrainedModel' /
>    torch has no attribute 'float8_e8m0fnu'»: pip ставил слишком НОВЫЙ transformers,
>    несовместимый с torch 2.6. Зафиксированы версии: `transformers<4.50`,
>    `sentence-transformers<3.4`, `huggingface_hub<0.30`. **Запустите install.bat ещё
>    раз** — он заменит несовместимые пакеты. Подсказка об этом теперь и в самой ошибке.
> 2. **Выбор и провайдера, и МОДЕЛИ** в каждом модуле: пресеты по провайдерам,
>    установленные модели Ollama, ручной ввод имени. Панель «Провайдер и модель по
>    каждому модулю» — в настройках слева; модель меняется автоматически с провайдером.
>    Исправлен конфликт настроек (вкладка ↔ сайдбар больше не затирают друг друга).
> 3. **М1 видит и систематизирует загруженное автоматически** (если файлы уже в папке
>    проекта). Пояснение: базовая карта строится по именам БЕЗ ИИ (потому смена
>    провайдера её не меняла); добавлена кнопка «🤖 Распознать разделы с ИИ» — работает
>    с любым провайдером, включая локальную Ollama (qwen2.5 и др.).
> 4. **Шрифт настраивается** в сайдбаре (16–24), по умолчанию крупнее (19px).
> 5. Граф знаний: на связях появились `first_seen`/`last_seen` (рекомендация ревью).
>
> **Версия 0.14.8:**
> 1. **Исправлен краш** «BAAI/bge-m3 does not appear to have a file named
>    model.safetensors»: репозиторий bge-m3 публикуется ТОЛЬКО с pytorch_model.bin,
>    а мы (фикс CVE-2025-32434) жёстко требовали safetensors. Теперь: сначала
>    строгий safetensors, и **безопасный автопереход на .bin**, если safetensors в
>    репозитории нет (под torch>=2.6 это безопасно — weights_only по умолчанию).
>    То же — для reranker. В журнале видна строка о переходе.
> 2. **Установщик скачивает модели и проверяет их работу** — новый шаг [5/5]:
>    `setup_models.py` скачивает bge-m3 + bge-reranker-v2-m3 (докачка при обрыве)
>    и выполняет САМОПРОВЕРКУ тем же кодом, что приложение: тестовое кодирование
>    (размерность, конечность значений) и тестовое ранжирование двух кандидатов.
>    Запуск вручную: `python setup_models.py` (флаги --skip-download/--skip-verify).
>    При неудаче установка продолжается, модели можно скачать кнопкой в Модуле 2.
>
> **Версия 0.14.9:**
> 1. **Исправлен краш самопроверки reranker** `CrossEncoder.__init__() got an
>    unexpected keyword argument 'cache_folder'`: у CrossEncoder в
>    sentence-transformers 3.3 нет такого параметра (он есть только у
>    SentenceTransformer), а запасной путь снимал не тот аргумент. Теперь
>    cache-параметры загрузчикам не передаются вовсе, а при несовпадении
>    сигнатур работает «лесенка» снятия необязательных аргументов.
> 2. **Единый кэш моделей**: каталог задаётся переменной HF_HOME
>    (`<данные>/models/hub`, выставляется в config.py) — туда качают и
>    setup_models.py, и предзагрузка Модуля 2, и оттуда же грузятся обе модели.
>    Повторное скачивание 2.3 ГБ исключено.
>
> **Версия 0.15.0 «Общие данные»** (замечания пользователя):
> 1. **Всё скачиваемое — в папке данных, а не приложения.** Виртуальное окружение
>    теперь общее: `<данные>\venv` (по умолчанию `%USERPROFILE%\.pmoos-rag\venv`),
>    кэш pip — `<данные>\pip-cache`, модели — `<данные>\models\hub` (как раньше).
>    Распаковали новую версию → install.bat находит общий venv → пакеты НЕ
>    скачиваются и не ставятся заново («already satisfied» за секунды), модели не
>    перекачиваются. Старые папки `.venv` внутри прошлых копий приложения можно
>    удалить. run.bat / run_module.bat активируют общий venv (со страховкой на
>    локальный .venv старых версий).
> 2. **Ключи API — в папке данных.** Рабочий файл: `<данные>\.env`; установщик
>    сам создаёт его из `.env.example` (или один раз переносит старый `.env` из
>    папки приложения) и кладёт рядом копию `.env.example`. Ввод ключа в
>    интерфейсе пишет туда же и показывает путь. Переустановка/обновление версии
>    ключи не трогает.
>
> Примечание для обновляющихся: при ПЕРВОМ запуске install.bat v0.15.0 общий venv
> создаётся заново, поэтому пакеты установятся один раз (torch ~2.5 ГБ может
> скачаться повторно в новый кэш) — дальше этот venv переиспользуется всеми
> будущими версиями.
>
> **Версия 0.15.1** — чистый журнал индексации: во встроенном (embedded) Qdrant
> payload-индексы больше не создаются (он их игнорирует и писал UserWarning на
> каждое поле); для server-Qdrant поведение сохранено. На функциональность
> локального поиска это не влияет — фильтры работают без индексов.
>
> **Версия 0.15.2** — исправлена ошибка Модуля 4 «Package not found at …docx»:
> 1. Файл замечаний теперь хранится в ПОСТОЯННОЙ папке проекта `remarks/`.
>    Раньше он попадал в `tmp_uploads`, которую кнопка «🧹 Очистить временные
>    файлы» (М1) стирает целиком — после очистки Блок 1 не находил файл.
>    Кнопка очистки папку `remarks/` не трогает (подсказка уточнена).
> 2. Автопоиск файла замечаний: сначала `remarks/`, затем (для совместимости)
>    старое место `tmp_uploads`; при наличии в обоих — приоритет у `remarks/`.
> 3. Понятные ошибки вместо «Package not found»: отдельно «файл не найден на
>    диске — загрузите заново» и отдельно «файл повреждён / не docx (нет
>    ZIP-заголовка) — пересохраните в Word». Плюс контроль записи при загрузке
>    (сверка размера; если мешает антивирус — об этом будет сказано явно).
> 4. М4 показывает путь, куда сохранён файл замечаний.
>
> **Версия 0.15.3** (раунд замечаний №9):
> 1. **Qdrant «already accessed»**: встроенная база однопроцессная, и после поиска
>    в М4 приложение держало её — фоновая индексация падала. Теперь поиск
>    освобождает базу сразу (close в finally), а при конфликте выводится понятная
>    подсказка («идёт индексация — дождитесь/нажмите Стоп; иначе перезапустите
>    run.bat») с 3 повторными попытками.
> 2. **XLSX: 'QdrantClient' has no attribute 'search'** — в qdrant-client 1.13+
>    метод удалён; добавлен адаптер: query_points для новых версий, search — для
>    старых.
> 3. **PDF-замечания**: детерминированный разбор нумерованного списка теперь
>    МНОГОСТРОЧНЫЙ (раньше бралась только первая строка пункта, и файл уходил в
>    ИИ-фолбэк с ошибкой JSON). Понимает и «12.», «12)», и номер отдельной
>    строкой (как PDF отдаёт таблицы). Для списков 1…75 ИИ не нужен.
> 4. **Поддержка старого .doc**: формат принимается в М4; старый бинарный .doc
>    (в т.ч. переименованный в .docx — ваш случай «нет ZIP-заголовка»)
>    автоматически конвертируется через установленный Microsoft Word; без Word —
>    понятная подсказка пересохранить.
> 5. **Загрузка замечаний по ссылке**, включая Google Drive «по ссылке»
>    (file/d/…, open?id=…): поле «…или ссылка на ФАЙЛ» + кнопка «⬇️ Скачать»;
>    файл попадает в постоянную папку remarks/. Ссылка должна вести на файл с
>    открытым доступом (не на папку).
> 6. **Кнопка «⏹ Стоп» индексации**: немедленно прерывает фоновый процесс;
>    прогресс по готовым файлам сохраняется, «⏯ Продолжить» возобновляет.
>
> **Версия 0.24.0 «Guardrails»** — надёжность и понятные сообщения (по итогам
> AppTest + dex-панели из 5 моделей; всё безопасно, без переиндексации):
> 1. **М4: флаг «без опоры на источники»** — если retrieval не нашёл в ПД ни
>    одного фрагмента по замечанию, ответ помечается ⚠ (баннер + в карточке):
>    ИИ мог ответить «от себя», для экспертизы это недопустимо — инженер
>    проверяет вручную.
> 2. **М5: понятные ошибки .docx** — «файл открыт в Word — закройте и повторите»
>    (PermissionError) и «повреждён/не docx — пересохраните» вместо трейсбэка.
> 3. **М2: индикатор устройства** — GPU (CUDA) 🟢 / CPU 🟠 с предупреждением, что
>    на CPU индексация в разы медленнее.
> 4. **М1: NFKC-нормализация имён** — неразрывные пробелы/лигатуры в именах
>    файлов больше не мешают распознаванию раздела.
>
> **Версия 0.23.0 «Chunking»** — семантическая нарезка чанков как OPT-IN (по
> вердикту dex-дебата: инфраструктура для A/B готова, поведение НЕ меняется
> по умолчанию — сначала измеряем):
> - `chunking.mode: "semantic"` — нарезка по СМЫСЛОВЫМ границам (пункты НПА
>   «5.4.», «п.», заголовки, абзацы) с целью ~512 токенов bge-m3; таблицы не
>   трогаются. По умолчанию `"char"` (прежнее поведение).
> - Кнопка **«♻ Переиндексировать заново»** в М2 (+ CLI `--reindex`): удаляет
>   базу проекта и индексирует всё заново — нужно после смены режима (иначе
>   дедупликация пропустит файлы).
> - A/B: `scripts/eval_golden.py run` до (char) и после (semantic + reindex) —
>   сравнить recall@k/MRR на золотом наборе. Чанкер покрыт юнит-тестами
>   (границы, отсутствие потери текста, лимиты, цельные таблицы, детерминизм).
>
> **Версия 0.22.0 «Clarity»** — понятный интерфейс и диагностика (по замечаниям
> с живого прогона; решения проверены dex-панелью из 6 моделей):
> 1. **Сайдбар упрощён**: только глобальные настройки (провайдер/модель по
>    умолчанию, ключи, статус локальных моделей одной строкой) + read-only
>    сводка «кто чем отвечает». Настройка ИИ модуля — ТОЛЬКО в его вкладке
>    (заголовок блока показывает активную связку «провайдер · модель»).
> 2. **Индексация: диагностика запуска** — точная причина сбоя старта фонового
>    процесса в статусе и журнале, команда запуска в журнале, кнопка
>    «🩺 Проверить окружение», toast с pid; путь журнала не искажается рендером.
> 3. **Классификатор имён понимает «Раздел N[.M]»** по номеру ПП-87 (точный
>    номер → код, иначе подъём к родителю 3.1.1→3.1→3) — такие файлы больше
>    не уходят в UNKNOWN.
> 4. **Граф связей (М3) информативнее**: размер узла = число связей, ПМООС
>    выделен цветом, тултипы «даёт/использует данные», легенда на графе.
>
> **Версия 0.21.0 «Measured»** — по итогам мульти-LLM дебата (/dex, 3 раунда,
> панель DeepSeek/Groq/Cerebras/Mistral/Gemma/Qwen): «сначала измеритель, потом
> улучшения качества». Единогласный №1 дебата — измеримость:
> 1. **Golden-set eval harness** (`scripts/eval_golden.py`): `build` собирает
>    эталоны из ПРИНЯТЫХ ответов проекта; `run` меряет retrieval
>    (recall@k, MRR по файлам-источникам); `judge` — LLM-сравнение новых ответов
>    с эталонными. История замеров — `<данные>/eval_history.jsonl`.
> 2. **JSON-повтор в ПАКЕТНОМ пути М4**: битый JSON в батче теперь получает один
>    batch-повтор «верни ТОЛЬКО JSON» (раньше — пустой ответ на замечание).
> 3. **Векторный few-shot памяти экспертизы**: похожие принятые ответы ищутся
>    эмбеддингами bge-m3 (ловит перефразировки; `memory.semantic`, порог
>    `memory.min_sim`), при недоступности — прежний лексический поиск.
> 4. **Fallback-цепочка LLM**: `ai.fallback_provider` (напр. `ollama`) — один
>    повтор через резерв при сбое основного провайдера. По умолчанию выключено.
> Смысловой чанкинг ~512 токенов (№2 дебата) — в следующей версии ПОСЛЕ снятия
> baseline на harness (вердикт дебата: мерить A/B, а не внедрять вслепую).
>
> **Версия 0.20.0 «Rebrand»** — единое имя продукта: **СтройПроект** (вместо
> ПМООС-RAG/PMOOS-RAG во всех заголовках, сайдбаре, баннерах установщика и
> колонтитулах формируемых документов; в .bat — латиницей STROYPROEKT).
> Внутренний пакет `pmoos/` и каталог данных `~/.pmoos-rag` НЕ переименованы
> (совместимость с существующими проектами/индексами). Попутно исправлено
> устаревшее «Modular» в подписи формируемых .docx (теперь живая версия).
>
> **Версия 0.19.0 «Tuned»** — пакет оптимизаций по итогам по-модульного аудита
> (DEX, кросс-LLM). Без изменения пользовательского поведения:
> 1. **М4: персистентный BM25-индекс** — корпус (ids/texts/payloads/tokens)
>    кэшируется на диск (`<проект>/bm25_corpus.pkl`), инвалидация по числу точек
>    в Qdrant; больше НЕ `scroll`-им всю коллекцию при каждом запуске пайплайна.
>    + пул кандидатов перед реранком 40→60 (лучше recall).
> 2. **М3: кэш графа зависимостей** по mtime — `downstream`/`explain_cascade`
>    больше не читают `graph.json` с диска на каждое замечание (≈150×→1 за прогон).
> 3. **М1: дисковый кэш OCR** (sqlite по sha страницы+язык) — повторная
>    индексация сканов не гоняет pytesseract заново.
> 4. **М6: валидация кодов ЗВ** перед выгрузкой УПРЗА (пустые/формат/дубли),
>    статус в `uprza_vybrosy.csv` и сводка в задании.
> Парсинг таблиц PDF (pdfplumber) намеренно НЕ менялся — приоритет качества/
> стабильности (смена движка таблиц — риск для числовых данных ООС).
>
> **Версия 0.18.0 «Split»** — модули можно запускать ОТДЕЛЬНО (аддитивно, единый
> хаб не изменён):
> 1. `app/hub.py` сделан импортируемым (set_page_config вынесен в main(), CSS — в
>    функцию apply_font_css) — без побочных эффектов при импорте.
> 2. Добавлены отдельные Streamlit-приложения модулей `app/modules_ui/module1..6.py`,
>    переиспользующие функции хаба (sidebar, tab_mN) — без дублирования логики.
>    Данные/проекты/индекс — общие.
> 3. Лаунчер `run_ui_module.bat` (меню выбора модуля). CLI-модули `modules/*.py`
>    и единый `run.bat` работают как раньше.
>
> **Версия 0.17.0 «Faster»** — пакет оптимизаций скорости/VRAM/качества (без изменения поведения для пользователя):
> 1. **FP16 для эмбеддера и реранкера на GPU** (`embedding.fp16`, `reranker.fp16`,
>    по умолчанию вкл.) — примерно вдвое быстрее кодирование и вдвое меньше VRAM
>    на RTX 3070 Ti; на CPU автоматически отключается.
> 2. **Синглтон моделей на процесс** — модели грузятся в VRAM один раз и
>    переиспользуются между модулями и ререндерами Streamlit (не перегружаются).
> 3. **Параллельное расширение запросов в М4** — перефразировки для всех
>    замечаний считаются разом (а не N последовательных вызовов LLM); плюс
>    предварительный батч-прогрев кэша эмбеддингов запросов.
> 4. **Память экспертизы — чтение KB один раз за прогон** с предвычислением
>    токенов (убрана квадратичная нагрузка при росте базы до сотен проектов).
> 5. **BM25-токенайзер понимает нормативные коды** — «СанПиН 2.2.1/2.1.1.1200-03»,
>    «ГОСТ 17.2.3.02-78» и т.п. индексируются единым токеном (точный лексический матч).
> 6. **JSON-ремонт с повтором** (`ai.json_repair_retry`) — при неудаче парсинга
>    один повтор «верни ТОЛЬКО JSON»; LLM-кэш использует одно sqlite-соединение.
>
> **Версия 0.16.0** (раунд замечаний №10) — крупная переработка М3–М5 и доработки М1/М2/М6:
> 1. **М1 — контакты из разделов.** Кнопка «🔎 Извлечь из разделов»: читает
>    первые страницы файлов ПД и файла замечаний, собирает роли (ГИП, Разработал,
>    Проверил, Эксперт…), ФИО, телефоны, email, организации. Редактируется
>    таблицей и сохраняется в contacts.json.
> 2. **М2 — журнал индексации обнуляется** при каждом запуске (раньше копился);
>    добавлена кнопка «🧽 Очистить».
> 3. **М3 — полная переработка «по-человечески».** Вместо сырых рёбер графа:
>    выбираете раздел в «Если изменится…» → получаете список разделов, которые
>    придётся перепроверить, с глубиной, цепочкой зависимостей и рекомендуемым
>    порядком пересчёта. Полная таблица связей — в раскрывающемся блоке;
>    интерактивный pyvis-граф — по желанию.
> 4. **М4 — систематизация и пакетная работа.** Замечания автоматически делятся
>    на типы (Перерасчёт, Нормативы, Доп. документы, Ввести данные, Правка по
>    источникам); проставляется ТОМ ООС (томов может быть несколько). Все
>    замечания видны СРАЗУ одной таблицей — без раскрытий; фильтры по типу и
>    статусу; метрики; пакетная приёмка («Принять показанные / ВСЕ», «Снять
>    решения»); работа с отдельным замечанием — ниже. Добавлена кнопка
>    «🗑 Сбросить ответы» (с подтверждением).
> 5. **М5 — реальная корректировка вместо списка правок.** Теперь формируются
>    РЕАЛЬНО откорректированные тома ООС: правки вносятся в ИСХОДНЫЙ .docx и
>    выделяются ЖЁЛТЫМ — по якорю («табл./п./раздел N») рядом с местом, иначе в
>    конце документа. Документ не пересобирается, поэтому большие тома (ваш
>    28 МБ) больше НЕ зависают. Поддержка нескольких томов сразу с
>    раскладкой правок по полю «Том ООС»; поддержка старого .doc (конвертация
>    через Word — исправляет «application/msword files are not allowed»).
>    Отдельно — «Ответы на замечания для экспертизы» (.docx/.xlsx) с колонками
>    №, ТИП, ТОМ ООС, ЗАМЕЧАНИЕ, ОТВЕТ, ИСТОЧНИК, СТАТУС. УПРЗА из М5 убран.
> 6. **М6 — только файлы для УПРЗА** (формулировка уточнена).
>
> **Изменения 0.14.1 (исправления интерфейса по вашим замечаниям):**
> 1. Исправлен краш `StreamlitDuplicateElementKey` (дубль ключа кнопки скачивания
>    на вкладках М5/М6) — теперь ключи уникальны; проверено прогоном приложения.
> 2. Надёжный детект **Ollama**: учитывается `OLLAMA_HOST`, пробуются
>    localhost/127.0.0.1 и эндпоинты `/api/tags`, `/api/version` (раньше «Ollama
>    запущена, но не определяется»).
> 3. Выбор **провайдера/модели и ручной ввод ключа — прямо во вкладках** М1/М3/М4
>    (а не только в боковой панели).
> 4. **Увеличен шрифт** интерфейса (было «не видно»).

---

## Содержание
1. [Что нового и какие проблемы исправлены](#исправленные-замечания)
2. [Установка](#установка)
3. [Запуск интерфейса](#запуск-интерфейса)
4. [Модули и запуск по отдельности](#модули)
5. [Настройки ИИ и ключи](#настройки-ии)
6. [Где хранятся данные](#данные)
7. [Оптимизация под GPU](#gpu)
8. [Что готово полностью, а что — каркас](#зрелость)
9. [Диагностика проблем](#диагностика)

---

<a name="исправленные-замечания"></a>
## 1. Исправленные замечания (все обязательные)

| # | Замечание пользователя | Как исправлено |
|---|------------------------|----------------|
| 1 | Эмбеддинги на CPU, а нужно GPU | `embedding.device=auto` → CUDA при наличии; `install.bat` ставит torch **cu124** |
| 2 | «Не удалось извлечь сбалансированный JSON» | модуль `core/json_utils.py`: поиск сбалансированного JSON, ремонт «умных» кавычек и хвостовых запятых |
| 3 | «Опять не видит ключ API» / ключ не брался из `.env` | `config.py` гарантированно грузит `.env` (`load_dotenv`), ключ берётся: config → `.env`/окружение; пустые строки = «нет ключа» |
| 4 | Убрать «запрос смежникам» | удалено полностью — такого блока в v0.11 нет |
| 5 | Линейный/площадной → автосостав разделов | переключатель типа объекта меняет обязательный состав ПД (`required_sections`) |
| 6 | «Разделов больше, чем показывает приложение» | заведён полный состав ПП-87: площадной (21 поз.) и линейный (11 поз.) + изыскания |
| 7 | Показывать таблицей, версии и визуальный граф изменений с датами | карта разделов таблицей + выбор актуальной версии + хронология изменений (даты) |
| 8 | Не выбирать раздел списком за пользователя | раздел файла — это **догадка с кандидатами**; пользователь подтверждает/исправляет |
| 9 | Не сохранять сами проекты | файлы ПД хранятся **временно**; в базе — только карта разделов и чанки/токены; есть кнопка «Очистить временные файлы» |
| 10 | Проверять скачанные модели перед скачиванием | `core/model_cache.py` + индикатор «скачана / будет скачана» в настройках |
| 11 | Показывать, сколько проиндексировано и сколько осталось | прогресс-бар: файлов done/total, чанков, % |
| 12 | Индексация не должна прерываться; пауза/возобновление | фоновый процесс (переживает закрытие вкладки) + состояние в `index_state.json` (пауза/продолжение переживают перезапуск) |
| 13 | Предлагать все установленные модели Ollama | `core/ollama_utils.py` → список из `ollama list` в настройках |
| 14 | Авто-смена модели по провайдеру в разных модулях | `config.resolve_provider(module)` + `model_for(provider, role)`; таблица в настройках |
| 15 | Ошибка `torch.load` (CVE-2025-32434) | принудительно `use_safetensors=True` (эмбеддер и реранкер) + torch ≥ 2.6 |
| 16 | Ошибка Qdrant при завершении (`__del__`) | корректное закрытие клиента через `atexit` |

---

<a name="установка"></a>
## 2. Установка

**Требования:** Windows 10/11, Python 3.10–3.12, ~6–8 ГБ свободного места
(под модели), для GPU — драйверы NVIDIA. Видеокарта необязательна (см. [GPU](#gpu)).

```bat
:: 1. Распакуйте архив, откройте папку проекта в проводнике
:: 2. Дважды кликните install.bat (или запустите в командной строке)
install.bat
```

`install.bat` создаст окружение `.venv`, поставит **PyTorch (CUDA 12.4)**,
затем зависимости из `requirements.txt`, и проверит доступность GPU.

> **Медленный/нестабильный интернет.** Установщик устойчив к обрывам:
> увеличенные таймауты и повторы, а если индекс по умолчанию
> (`files.pythonhosted.org`) не отвечает — он **автоматически переключается на
> зеркало** и при необходимости ставит пакеты по одному (успешно скачанные
> сохраняются). Если что-то всё же не докачалось — просто запустите `install.bat`
> ещё раз, загрузка продолжится. PyTorch при этом ставится один раз и не качается
> повторно. (Сообщение «Failed to initialize NumPy» в старой версии означало, что
> из-за обрыва не успел установиться NumPy — теперь это исправлено.)

> **Для сканированных PDF (OCR)** дополнительно установите Tesseract OCR и
> русский языковой пакет (`rus`). Без него текстовые PDF всё равно работают.
>
> **Локальные модели (без облака):** установите [Ollama](https://ollama.com),
> затем, например, `ollama pull qwen2.5:7b-instruct`.

Linux/macOS: `bash install.sh`.

---

<a name="запуск-интерфейса"></a>
## 3. Запуск интерфейса

```bat
run.bat
```
Откроется браузер с единым интерфейсом (вкладки М1–М6). Слева — выбор проекта,
тип объекта (площадной/линейный) и настройки ИИ.

---

<a name="модули"></a>
## 4. Модули и запуск по отдельности

Каждый модуль — отдельный скрипт в `modules/`. Запуск через `run_module.bat`
(активирует окружение и выполняет команду):

### МОДУЛЬ 1 — систематизация ПД (ПП-87) и версии
```bat
run_module.bat modules\module1_inventory.py --project "ОПОЧКА-ДУБРОВКА 83-26С" --uploads C:\files --object-type линейный
run_module.bat modules\module1_inventory.py --project "ОПОЧКА-ДУБРОВКА 83-26С" --show
```
Распознаёт раздел каждого файла, строит карту разделов (что есть / чего не
хватает по ПП-87), определяет версии и хронологию. Контакты — в интерфейсе.

### МОДУЛЬ 2 — RAG-база (индексация)
```bat
run_module.bat modules\module2_index.py --project "X" --background     :: в фоне
run_module.bat modules\module2_index.py --project "X" --status         :: прогресс
run_module.bat modules\module2_index.py --project "X" --pause
run_module.bat modules\module2_index.py --project "X" --resume
```
Гибридный поиск (dense bge-m3 + BM25 + RRF + реранкер). База Qdrant — **отдельно
от приложения**, дедупликация по содержимому, стабильные ID чанков (повторная
индексация не плодит дубли).

### МОДУЛЬ 3 — граф связей и каскад изменений
```bat
run_module.bat modules\module3_graph.py --project "X" --html
run_module.bat modules\module3_graph.py --project "X" --changed POS,TKR
```
Показывает зависимости данных между разделами и **что нужно пересчитать** при
изменении (напр. ПОС → выбросы → рассеивание → СЗЗ).

### МОДУЛЬ 4 — ответы на замечания ПМООС (3 блока)
```bat
run_module.bat modules\module4_answers.py --project "X" --remarks "замечания оос 1-75.docx" --object-type линейный --block 1
run_module.bat modules\module4_answers.py --project "X" --list
run_module.bat modules\module4_answers.py --project "X" --accept 5
run_module.bat modules\module4_answers.py --project "X" --edit 7 --text "Уточнённый ответ..."
run_module.bat modules\module4_answers.py --project "X" --block 2
run_module.bat modules\module4_answers.py --project "X" --block 3
```
- **Блок 1** — найти ответ по каждому замечанию с источником (раздел/файл/стр.);
- **Блок 2** — проверить расчёты, ссылки, актуальность нормативов;
- **Блок 3** — финальная проверка раздела целиком.
Решение по каждому пункту принимает пользователь (принять/править/отклонить).

### МОДУЛЬ 5 — корректировка ПМООС (DOCX) и таблица ответов
```bat
run_module.bat modules\module5_export.py --project "X" --oos "Раздел ПМООС.docx"
```
Формирует откорректированный раздел ПМООС (`.docx`) и таблицу ответов на **все**
замечания со столбцами **«ОТВЕТ»** и **«ИСТОЧНИК»** (раздел/файл/страница) —
в `.docx` и `.xlsx`.

### МОДУЛЬ 6 — выгрузка для УПРЗА «Эколог» / ИНТЕГРАЛ
```bat
run_module.bat modules\module6_uprza.py --project "X"
```
Таблицы источников выбросов и загрязняющих веществ (с кодами ЗВ) + задание на
ввод для расчёта рассеивания и карт.

---

<a name="настройки-ии"></a>
## 5. Настройки ИИ и ключи

- **Провайдер по умолчанию** и **переопределение по модулям** — в интерфейсе слева.
  При смене провайдера **модель меняется автоматически** (таблица «Модель по модулям»).
- **Ключи API** вводятся в интерфейсе (сохраняются в `~/.pmoos-rag/.env`) или
  задаются вручную (скопируйте `.env.example`). Ключи **не** хранятся в `config.yaml`.
- **Ollama**: установленные модели подхватываются автоматически (`ollama list`).
- Тонкая настройка моделей и порогов — в `config.yaml` (см. `config.example.yaml`).
  Имена моделей — значения по умолчанию; проверьте актуальные у провайдера.

---

<a name="данные"></a>
## 6. Где хранятся данные

Всё — в каталоге данных **вне приложения** (по умолчанию `~/.pmoos-rag`,
можно сменить через `PMOOS_DATA_DIR`):
```
~/.pmoos-rag/
  ├─ projects.json              реестр проектов
  ├─ .env                       ключи API
  ├─ config.yaml                настройки (необязательно)
  ├─ qdrant/                    векторная база (общая, не переиндексируется)
  ├─ emb_cache/                 кэш эмбеддингов
  ├─ models/                    скачанные модели (bge-m3, reranker)
  └─ projects/<проект>/
       ├─ inventory.json        карта разделов
       ├─ versions.json         версии и даты
       ├─ graph.json            граф связей
       ├─ answers.json          ответы Блока 1 + статусы решений
       ├─ decisions.jsonl       журнал решений (для обучения в будущем)
       ├─ tmp_uploads/          ВРЕМЕННЫЕ файлы ПД (можно удалять)
       └─ out/                  готовые .docx/.xlsx/.csv/.html
```
**Файлы проекта не хранятся постоянно** — после индексации `tmp_uploads` можно
очистить кнопкой в М1; карта разделов и база остаются.

---

<a name="gpu"></a>
## 7. Оптимизация под GPU (RTX 3070 Ti, 8 ГБ)

- torch ставится из индекса **cu124** (`install.bat`); эмбеддер bge-m3 идёт на CUDA.
- `embedding.batch_size=16`, `max_length=1024` — баланс скорости и VRAM.
- При нехватке VRAM (одновременно Ollama + индексация): уменьшите `batch_size`,
  для Ollama держите `num_ctx` ≤ 8192, либо запускайте индексацию и генерацию
  последовательно. Реранкер и эмбеддер освобождают CUDA-кэш.
- **Без NVIDIA-GPU**: всё работает на CPU (медленнее). `install.bat` сам поставит
  CPU-сборку torch, если cu124 недоступен.

### Qdrant в режиме сервера (для больших баз) и Ollama
- По умолчанию Qdrant работает встроенно (файлы в `~/.pmoos-rag/qdrant`). Для
  200+ проектов и сотен тысяч чанков запустите сервер:
  `docker compose up -d`, затем в `config.yaml`:
  `qdrant: { mode: server, url: "http://localhost:6333" }`.
- **Локальные модели (privacy, без оплаты API)** через Ollama на RTX 3070 Ti:
  установите Ollama, выполните `ollama pull qwen2.5:7b-instruct` (рекомендуется),
  в настройках слева выберите провайдер **Ollama** — модель подхватится
  автоматически. Держите `num_ctx` ≤ 8192, чтобы не переполнить 8 ГБ VRAM, если
  одновременно идёт индексация (эмбеддер bge-m3 тоже использует GPU).

---

<a name="зрелость"></a>
## 8. Что готово полностью, а что — каркас

**Готово и протестировано:** систематизация ПД и карта разделов (М1), версии и
хронология, граф связей и каскад (М3), формирование откорректированного ПМООС и
таблицы ответов с «ОТВЕТ»/«ИСТОЧНИК» (М5), выгрузка для УПРЗА (М6), конвейер
ответов с провенансом, проверкой согласованности и нормативов (М4, блоки 1–3),
маршрутизация ИИ-провайдеров и ключей, фоновая индексация с паузой.

**Каркас / требует данных и обкатки:**
- **Качество ответов М4** зависит от провайдера и полноты индекса — проверяйте и
  правьте предложения (human-in-the-loop встроен намеренно).
- **М6/УПРЗА**: формат «Эколог» закрытый, поэтому выгрузка — это CSV + задание;
  геометрию источников и привязку значений к источникам заполняет инженер.
- **Обучение на 200 проектах** (автонаписание разделов с нуля): база заложена и
  уже работает в части накопления ответов — **память экспертизы** (v0.13.0)
  копит принятые пары «замечание→ответ» и подмешивает их как примеры в новые
  ответы. Полное автонаписание разделов «с нуля» — следующий этап (см. ниже).
- Имена моделей в конфиге — дефолтные, могут устареть; проверяйте у провайдера.

---

<a name="диагностика"></a>
## 9. Диагностика проблем

- **«CUDA недоступна»** — переустановите torch из cu124 (см. `install.bat`),
  проверьте драйверы NVIDIA. Для работы на CPU ничего делать не нужно.
- **«Ключ API не виден»** — задайте ключ в интерфейсе или в `~/.pmoos-rag/.env`;
  кнопка в настройках сразу подхватывает ключ.
- **Ollama не найдена** — запустите `ollama serve` и `ollama pull <model>`.
- **Долгая первая индексация** — модели bge-m3/reranker скачиваются один раз в
  `~/.pmoos-rag/models` (статус виден в настройках).
- **Замечания не извлеклись из файла** — проверьте, что это таблица/нумерованный
  список; модуль также умеет извлекать замечания через ИИ.

---

© Внутренний инструмент эколога-проектировщика. Используйте ответы ИИ как
черновик — окончательное решение и ответственность за раздел остаются за
инженером.
